<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">
  
  <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="25dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center">


                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_rounded_edit_text"
                    android:drawablePadding="25dp"
                    android:ems="15"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/edit_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#d8d8d8"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:autofillHints="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_rounded_edit_text"
                    android:drawablePadding="25dp"
                    android:ems="15"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#d8d8d8"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/text_view_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_login"
        android:orientation="vertical"
        android:gravity="bottom|end">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_rounded_primary"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btn_login"
            android:textAllCaps="true"
            android:textColor="@color/textColorSecondary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:gravity="center"
            android:text="@string/no_account_sign_up"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_rounded_primary"
            android:backgroundTint="#ffb52b"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btn_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/textColorSecondary"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</RelativeLayout>